completed the upload file endpoint

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 JWT_SECRET=EAG8K2kSco3mSZwlg6NJFXxDRyo332pXBp0UJ1S7Fwo=
 JWT_EXPIRES_IN=1d
 DB_PASSWORD="#2Pa55worD5#"
+CLOUDINARY_URL=cloudinary://815436586889181:UnMOqawnmJs9xaIISB8m6RolasI@dpuzj4j34
+CLOUDINARY_NAME=dpuzj4j34
+CLOUDINARY_API_KEY=815436586889181
+CLOUDINARY_API_SECRET=UnMOqawnmJs9xaIISB8m6RolasI
