--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ CLOUDINARY_URL=cloudinary://815436586889181:UnMOqawnmJs9xaIISB8m6RolasI@dpuzj4j3
 CLOUDINARY_NAME=dpuzj4j34
 CLOUDINARY_API_KEY=815436586889181
 CLOUDINARY_API_SECRET=UnMOqawnmJs9xaIISB8m6RolasI
+TMDB_API_KEY=daee6e0557ce4a43d95a50ad3984f9e1
