connected backend to supabase and pgAdmin to supabase also

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ CLOUDINARY_NAME=dpuzj4j34
 CLOUDINARY_API_KEY=815436586889181
 CLOUDINARY_API_SECRET=UnMOqawnmJs9xaIISB8m6RolasI
 TMDB_API_KEY=daee6e0557ce4a43d95a50ad3984f9e1
+SUPABASE_DATABASE_URL=postgresql://postgres.cksmooyzhnauscgqkffu:#2Pa55worD5#@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
