fxing supabase connection issue

--- a/.env
+++ b/.env
@@ -6,4 +6,9 @@ CLOUDINARY_NAME=dpuzj4j34
 CLOUDINARY_API_KEY=815436586889181
 CLOUDINARY_API_SECRET=UnMOqawnmJs9xaIISB8m6RolasI
 TMDB_API_KEY=daee6e0557ce4a43d95a50ad3984f9e1
-SUPABASE_DATABASE_URL=postgresql://postgres.cksmooyzhnauscgqkffu:#2Pa55worD5#@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
+SUPABASE_DATABASE_URL="postgresql://postgres.cksmooyzhnauscgqkffu:#2Pa55worD5#@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
+SUPABASE_DB_HOST=aws-0-eu-central-1.pooler.supabase.com
+SUPABASE_DB_USER=postgres.cksmooyzhnauscgqkffu
+SUPABASE_DB_PASSWORD="#2Pa55worD5#"
+SUPABASE_DB_NAME=movie_watchlist_app
+SUPABASE_DB_PORT=5432
